# ok-face-mixer-rs

./: Cargo.toml  Dockerfile  README.md  index.html
.github/workflows/: rust.yml
ok-face-mixer-api/: Cargo.toml  build.rs
ok-face-mixer-api/src/: main.rs
ok-face-mixer-core/: Cargo.toml
ok-face-mixer-core/src/: generator.rs  lib.rs
ok-face-mixer-web/: Cargo.toml  Trunk.toml  index.html  rust-toolchain.toml  styles.css
ok-face-mixer-web/src/: main.rs
src/: main.rs  smile.rs
