[package]
name = "ok-face-mixer-core"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.6", optional = true }
lazy_static = { version = "1.5.0", optional = true }
log = "0.4.27"
rand = { version = "0.9.0", optional = true }
strum = "0.27.1"
strum_macros = "0.27.1"

[features]
query = []
generator = ["dep:image", "dep:lazy_static"]
rand = ["dep:rand"]
